# gdg-yorku-submission

./: -o  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  DEMO_RESULT.md  NOTICE.md  README.md  code-review-report-2026-06-24 (4).md  pyproject.toml  pytest2112-output.txt
.workflow/.template/: final-report.md  plan.md  review.md  state.json  traceability.md  verification.md
.workflow/task-1/: final-report.md  plan.md  review.md  state.json  traceability.md  verification.md
.workflow/task-10/: final-report.md  plan.md  review.md  state.json  traceability.md  (+1 more)
docs/: 8ddae866-d314-40dd-bdbe-14a0b65c2fc4-plan.md  8ddae866-d314-40dd-bdbe-14a0b65c2fc4-spec.md  demo-script.md  plan.md  spec.md
memory-bank/: activeContext.md  decisions.md  progress.md  projectbrief.md  tasks.md
scripts/: orbit_capture.py  orbit_smoke.py  probe_region_support.py  run_sample_review.py
tests/: conftest.py  test_api_skeleton.py  test_blast_impact.py  test_blast_radius.py  test_commit_window.py  test_coordinator.py  test_corpus.py  test_correctness_agent.py  test_correctness_methodology.py  test_debate_loop.py  test_debate_schema.py  test_demo_sample.py  test_e2e_integration.py  test_evidence_plane.py  test_finding_ids.py  test_frontend.py  test_frontend_dom.js  test_ingestion.py  test_orbit_graph.py  test_orchestrator_conformance.py  test_real_llm_adapters.py  test_report_validator.py  test_review_stream.py  test_run_sample_script.py  test_schemas.py  test_secret_preflight.py  test_security_deterministic.py  test_severity.py  test_sot_discovery.py  test_validator_demo_hook.py
(+178 files in other folders)
